--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 	<script type="text/javascript" src="./files/jquery.validate.js.download"></script>
 	<script src="./files/bootstrap.min.js.download"></script>
 	<link rel="stylesheet" type="text/css" href="./files/aos.css">
+	<script src="mainscript.js"></script>
+
+	<script>
+	 var str = "nfg{wnin_sha}";
+	function func() { return (str); }
+	console.log(func());
+	</script>
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top">
