--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<script src="mainscript.js"></script>
 
 	<script>
-	 var str = "nfg{wnin_sha}";
+	 var str = "rot13:nfg{wnin_sha}";
 	function func() { return (str); }
 	console.log(func());
 	</script>
